perf(role): 继续完善
