# api-docs.yaml
@@ -6,6 +6,82 @@ servers:
 - url: http://127.0.0.1:8080
   description: Generated server url
 paths:
+  /admin/role/{id}/permissions:
+    get:
+      tags:
+      - 角色接口
+      summary: 获取角色绑定的权限
+      operationId: getRoleBindPermissions
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RolePermissionVO"
+      security:
+      - accessToken: []
+    put:
+      tags:
+      - 角色接口
+      summary: 全量替换角色绑定的权限
+      operationId: replaceRolePermissions
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ReplaceRolePermissionsDTO"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RolePermissionVO"
+      security:
+      - accessToken: []
+    post:
+      tags:
+      - 角色接口
+      summary: 增量添加角色绑定的权限
+      operationId: addRolePermissions
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AddRolePermissionsDTO"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RolePermissionVO"
+      security:
+      - accessToken: []
   /admin/articles/{id}/video:
     put:
       tags:
@@ -397,6 +473,34 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/RoleVO"
+      security:
+      - accessToken: []
+  /admin/role/{roleId}/permissions/{permId}:
+    post:
+      tags:
+      - 角色接口
+      summary: 移除单个角色绑定的权限
+      operationId: removeRolePermission
+      parameters:
+      - name: roleId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: permId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/RolePermissionVO"
       security:
       - accessToken: []
   /admin/comment/{id}:
@@ -1244,30 +1348,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageResponseHomeArticleVO"
-  /admin/role/{id}/permissions:
-    get:
-      tags:
-      - 角色接口
-      summary: 获取角色绑定的权限
-      operationId: getRoleBindPermissions
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/PermissionVO"
-      security:
-      - accessToken: []
   /admin/permission:
     get:
       tags:
@@ -1381,6 +1461,63 @@ paths:
       - accessToken: []
 components:
   schemas:
+    ReplaceRolePermissionsDTO:
+      type: object
+      properties:
+        permissions:
+          type: array
+          description: 角色绑定的权限列表
+          items:
+            type: integer
+            format: int64
+      required:
+      - permissions
+    PermissionVO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: 权限id
+        code:
+          type: string
+          description: 权限标识符
+        name:
+          type: string
+          description: 权限名字
+        description:
+          type: string
+          description: 权限描述
+      required:
+      - code
+      - id
+      - name
+    RolePermissionVO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: 角色id
+        code:
+          type: string
+          description: 角色标识符
+        name:
+          type: string
+          description: 角色名字
+        description:
+          type: string
+          description: 角色描述
+        permissions:
+          type: array
+          description: 角色绑定的权限
+          items:
+            $ref: "#/components/schemas/PermissionVO"
+      required:
+      - code
+      - id
+      - name
+      - permissions
     UploadArticleVideoDTO:
       type: object
       properties:
@@ -1698,6 +1835,17 @@ components:
       - code
       - id
       - name
+    AddRolePermissionsDTO:
+      type: object
+      properties:
+        permissions:
+          type: array
+          description: 角色绑定的权限列表
+          items:
+            type: integer
+            format: int64
+      required:
+      - permissions
     CreateCategoriesDTO:
       type: object
       properties:
@@ -1906,26 +2054,6 @@ components:
         description:
           type: string
           description: 权限描述
-    PermissionVO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: 权限id
-        code:
-          type: string
-          description: 权限标识符
-        name:
-          type: string
-          description: 权限名字
-        description:
-          type: string
-          description: 权限描述
-      required:
-      - code
-      - id
-      - name
     UpdateCommentDTO:
       type: object
       properties:
